current state #WEBINTERFACE-51

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,7 +61,7 @@
   <% end %>
 
   <div id="current-operations">
-    5 <span id="current-operations-desc">ops</span>
+    <%= OperationInterface.new.count %> <span id="current-operations-desc">ops</span>
   </div>
 
   <div id="top">
